# TurtleFetch

./: README.md
RoomMap/: 170map.pgm  map.yaml
rsp_ur5e/: 1.urdf  hardcode.txt
rsp_ur5e/07/se3_sensor_driver/: CMakeLists.txt  plugin.xml
rsp_ur5e/07/se3_sensor_driver/config/: se3_sensor.yaml
rsp_ur5e/07/se3_sensor_driver/src/: sensor_tf_sender.cpp
rsp_ur5e/07/se3_sensor_driver/urdf/: se3_sensor.urdf.xacro
rsp_ur5e/08/ros2_controllers_cartesian/: package.xml
rsp_ur5e/08/ros2_controllers_cartesian/include/ros2_controllers_cartesian/: cartesian_controller.hpp
rsp_ur5e/08/ros2_controllers_cartesian/src/: cartesian_node_main.cpp
rsp_ur5e/09/ur5e_cartesian_control/: CMakeLists.txt  package.xml  package.xml~
rsp_ur5e/09/ur5e_cartesian_control/config/: config.rviz  robot_calibration.yaml  tot.world  ur5e_controller.yaml
rsp_ur5e/09/ur5e_cartesian_control/launch/: ur5e.launch.py
rsp_ur5e/09/ur5e_cartesian_control/urdf/: gripper.xacro  ur5e_cartesian.urdf.xacro
simulation_stuff/: CMakeLists.txt  package.xml
simulation_stuff/launch/: world.launch.py
simulation_stuff/worlds/: testworld.sdf
tb4_simulation/: note.txt
tb4_simulation/ros2_controllers_cartesian/: CMakeLists.txt
tb4_simulation/ros2_controllers_cartesian/src/: cartesian_controller.cpp
tb4_simulation/se3_sensor_driver/: package.xml
tb4_simulation/se3_sensor_driver/include/se3_sensor_driver/: hardware_interface.hpp
tb4_simulation/se3_sensor_driver/launch/: se3_sensor.launch.py
tb4_simulation/se3_sensor_driver/src/: hardware_interface.cpp
tb4_simulation/se3_sensor_driver/urdf/: se3_sensor.xacro
tb4_simulation/t4_wyman/: CMakeLists.txt  package.xml
tb4_simulation/t4_wyman/config/: nav2.yaml  patrol.xml
tb4_simulation/t4_wyman/launch/: tb4_wyman_patrol.launch.py  tb4_wyman_slam.launch.py
tb4_simulation/t4_wyman/maps/: 170map.yaml  map.pgm  map.yaml
tb4_simulation/t4_wyman/worlds/: wyman.sdf  wyman.stl
tb4_simulation/tb4_ur5e/: CMakeLists.txt  package.xml
tb4_simulation/tb4_ur5e/launch/: tb4_ur5e.launch.py
tb4_simulation/tb4_ur5e/worlds/: wyman_ur5e.sdf
tb4_simulation/ur5e_cartesian_control/: CMakeLists.txt  package.xml
tb4_simulation/ur5e_cartesian_control/config/: ur5e_controller.yaml
tb4_simulation/ur5e_cartesian_control/launch/: ur5e.launch.py
tb4_simulation/ur5e_cartesian_control/urdf/: gripper.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro  robotiq_85_gripper2.xacro  ur5e_cartesian.urdf.xacro
turtlbot_actions/: CMakeLists.txt  package.xml
turtlefetch_msgs/: CMakeLists.txt  package.xml
turtlefetch_turtlebot4/: CMakeLists.txt  package.xml
turtlefetch_turtlebot4/config/: nav2.yaml  patrol.xml  patrol_test.xml
turtlefetch_turtlebot4/launch/: turtlefetch_turtlebot4.launch.py
turtlefetch_turtlebot4/maps/: map.pgm  map.yaml
ur5e_actions/: CMakeLists.txt  package.xml
urdf_actions/: CMakeLists.txt  package.xml
user_inputs/: CMakeLists.txt  package.xml
