<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb4_ur5e</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="huangrc@gmail.com">ruichen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>turtlebot4_ignition_bringup</exec_depend>
  <exec_depend>ur5e_cartesian_control</exec_depend>
  <exec_depend>ros2_controllers_cartesian</exec_depend>
  <exec_depend>se3_sensor_driver</exec_depend>
  <exec_depend>rclpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
